# shu_api_kurs

./: .gitignore  pyproject.toml
0_chapter/habr_articles/: main.py
0_chapter/habr_articles/test/: test_sample.py
0_chapter/hhapi/: main.py  vacancies.json
0_chapter/hhapi/docs/: readme.txt
1_chapter/: hotels.py  main.py  support.py  test_it.ipynb
1_chapter/api_examples/: post_endpoints.py
1_chapter/schemas/: hotels.py
